--- a/src/components/OasisTeaser/OasisTeaser.module.scss
+++ b/src/components/OasisTeaser/OasisTeaser.module.scss
@@ -8,7 +8,7 @@
     & .wrapper {
         display: grid;
         place-items: center;
-        gap: dimensions.margin('sm');
+        gap: dimensions.margin('xl');
 
         & .nav {
             display: flex;
