--- a/src/pages/Event/EventResult/EventResult.module.scss
+++ b/src/pages/Event/EventResult/EventResult.module.scss
@@ -25,7 +25,6 @@
                 align-items: center;
                 width: 100%;
                 
-
                 & .countdown {
                     
                     & .title {
@@ -68,6 +67,15 @@
                         }
                     }
                 }
+            }
+
+            & .description {
+                margin: dimensions.margin('xl');
+
+                background: rgba(0, 0, 0, 0.75);
+                padding: dimensions.padding('xl');
+                border-radius: decorations.border-radius('md');
+                box-shadow: decorations.box-shadow('md');
             }
 
             @media (max-width: breakpoints.screen("desktop")) {
