--- a/src/pages/Reservations/Reservations.module.scss
+++ b/src/pages/Reservations/Reservations.module.scss
@@ -8,10 +8,9 @@
 
     & .teaser {
         display: flex;
-        justify-content: space-between;
+        justify-content: end;
         align-items: center;
         box-shadow: decorations.box-shadow('md');
-
         background: colors.bg('primary');
         padding: dimensions.padding('md');
     }
@@ -23,6 +22,12 @@
         border-radius: decorations.border-radius('md');
         box-shadow: decorations.box-shadow('md');
         justify-self: center;
+
+        & nav {
+            display: flex;
+            justify-content: center;
+            gap: dimensions.margin('md');
+        }
     }
 
     & .content {
