--- a/src/pages/ContentPage/ContentPageResult/ContentPageResult.module.scss
+++ b/src/pages/ContentPage/ContentPageResult/ContentPageResult.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/dimensions.scss' as dimensions;
+@use '@styles/decorations.scss' as decorations;
 
 .container {
     min-height: 100vh;
@@ -10,4 +11,9 @@
     display: grid;
     align-content: start;
     gap: dimensions.margin('lg');
+
+    background: rgba(0, 0, 0, 0.75);
+    padding: dimensions.padding('xl');
+    border-radius: decorations.border-radius('md');
+    box-shadow: decorations.box-shadow('md');
 }
