--- a/src/components/Rules/Rules.module.scss
+++ b/src/components/Rules/Rules.module.scss
@@ -4,14 +4,15 @@
 @use '@styles/colors.scss' as colors;
 
 .container {
-    margin: 0 dimensions.margin('xxl');
+    max-height: 100%;
 
-    background: rgba(0, 0, 0, 0.75);
-    padding: dimensions.padding('xl');
-    border-radius: decorations.border-radius('md');
-    box-shadow: decorations.box-shadow('md');
+    & .content {     
+        display: grid; 
+        overflow-y: auto;
+        max-height: 75vh;
+        padding: 0 dimensions.margin('lg');
+        padding-bottom: dimensions.margin('md');
 
-    & .content {        
         & h1, & h2, & h3, & h4 {
             color: colors.text('secondary');
             text-align: center;
@@ -23,6 +24,6 @@
     }
 
     @media (max-width: breakpoints.screen('tablet')) {
-        margin: 0 dimensions.margin('md');
+        margin: 0 dimensions.margin('lg');
     }
 }
