--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -10,6 +10,7 @@
     background: colors.bg('primary');
     box-shadow: decorations.box-shadow('md');
     max-width: 50vw;
+    max-height: 85vh;
     border: 1px solid rgb(44, 44, 44);
 
     & .backgroundWrapper {
@@ -41,7 +42,7 @@
         justify-content: center;
 
         overflow-x: hidden;
-        overflow-y: auto;
+        overflow-y: hidden;
         //padding: dimensions.padding('xs') dimensions.padding('md');
         z-index: 1;
         border-radius: 0 0 decorations.border-radius('md') decorations.border-radius('md');
