--- a/src/components/StaffList/StaffList.module.scss
+++ b/src/components/StaffList/StaffList.module.scss
@@ -37,6 +37,7 @@
         & .memories {
             display: flex;
             justify-content: center;
+            margin-top: dimensions.margin('lg');
         }
     }
 
