Switch all rich texts to RichTextRenderer for consistent formatting.

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,18 @@
   box-sizing: border-box
 }
 
+b {
+  font-weight: 800;
+}
+
+u {
+  text-decoration: underline;
+}
+
+i {
+  font-style: italic;
+}
+
 html {
   scroll-behavior: smooth;
 }
