Remove redundant code.

--- a/src/pages/Event/EventResult/EventResult.module.scss
+++ b/src/pages/Event/EventResult/EventResult.module.scss
@@ -6,6 +6,7 @@
 .container {
     position: relative;
     padding: dimensions.padding('xl');
+    margin: dimensions.margin('xl');
 
     & .hero {
         position: relative;
