--- a/src/pages/Event/EventResult/EventResult.module.scss
+++ b/src/pages/Event/EventResult/EventResult.module.scss
@@ -19,6 +19,10 @@
             padding: dimensions.padding('md');
             z-index: 2;
 
+            & .title {
+                margin-top: dimensions.margin('xxl');
+            }
+
             & .infoWrapper {
                 display: flex;
                 flex-direction: row-reverse;
@@ -27,7 +31,7 @@
                 width: 100%;
                 
                 & .countdown {
-                    
+
                     & .title {
                         text-align: center;
                         color: colors.text('secondary');
