--- a/src/components/InfoCard/InfoCard.module.scss
+++ b/src/components/InfoCard/InfoCard.module.scss
@@ -10,6 +10,12 @@ $cardHeightBigger: 600px;
 .container {
     perspective: $cardHeightStandard;
     cursor: pointer;
+    border-radius: 20px;
+
+    // Event exclusivity
+    &.valentines {
+        box-shadow: 0 2px 8px 2px rgb(240, 112, 245);
+    }
 
     &:hover .card {
         filter: brightness(.8);
