--- a/src/components/SeatingPlanModal/SeatingPlan/SeatingPlan.module.scss
+++ b/src/components/SeatingPlanModal/SeatingPlan/SeatingPlan.module.scss
@@ -1,3 +1,31 @@
 .container {
+    display: grid;
 
+    & .section {
+        position: relative;
+
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+    }
+
+    & .seating {
+        position: absolute;
+
+        left: 0;
+        top: 0;
+
+        display: grid;
+        place-items: center;
+        border-radius: 100%;
+
+        &.available {
+            background: green;
+        }
+
+        &.taken {
+            background: red;
+        }
+    }
 }
