Fix hidden reserved tables.

--- a/src/components/SeatingPlanModal/SeatingPlan/SeatingPlan.module.scss
+++ b/src/components/SeatingPlanModal/SeatingPlan/SeatingPlan.module.scss
@@ -24,7 +24,7 @@
             background: green;
         }
 
-        &.taken {
+        &.taken &.reserved {
             background: red;
         }
     }
