--- a/src/components/SeatingPlanModal/SeatingPlan/SeatingPlan.module.scss
+++ b/src/components/SeatingPlanModal/SeatingPlan/SeatingPlan.module.scss
@@ -8,6 +8,7 @@
     & .topNav {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding: dimensions.padding('sm') 0;
 
         & .sectionSelection {
