--- a/src/components/InfoCard/InfoCard.module.scss
+++ b/src/components/InfoCard/InfoCard.module.scss
@@ -41,12 +41,17 @@ $cardHeightBigger: 600px;
     
         & .background {
             $offset: 10px;
+            z-index: 1;
 
             left: - $offset;
             top: - $offset;
             width: calc(100% + $offset);
             height: calc(100% + $offset);
             background-size: cover;
+
+            &.isTemporarilyUnavailable {
+                filter: grayscale(1);
+            }
         }
     
         & .title {
@@ -54,6 +59,7 @@ $cardHeightBigger: 600px;
             text-align: center;
             padding: dimensions.padding('sm');
             word-wrap: break-word;
+            z-index: 2;
     
             & .titleBackground {
                 position: absolute;
@@ -84,6 +90,20 @@ $cardHeightBigger: 600px;
                 opacity: 50%;
             }
         }
+    }
+
+    .isTemporarilyUnavailable {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 3;
+
+        display: grid;
+        place-items: center;
+        text-align: center;
+        background: rgba(0, 0, 0, 0.7);
     }
 
     @media (max-width: breakpoints.screen('tablet')) {
