--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -33,6 +33,7 @@ $neutral-colors: (
     "white": rgb(228, 228, 220),
     "black": rgb(15, 15, 15),
     "green": rgb(122, 199, 107),
+    "yellow": #cead54,
     "red": rgb(211, 106, 106)
 );
 
