--- a/src/components/Grid/Grid.module.scss
+++ b/src/components/Grid/Grid.module.scss
@@ -14,6 +14,10 @@
         grid-template-columns: repeat(5, 1fr);
     }
 
+    @media (max-width: breakpoints.screen('desktop')) {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
     @media (max-width: breakpoints.halfway('desktop', 'tablet')) {
         grid-template-columns: repeat(3, 1fr);
     }
