Adjust countryflag margin to avoid clipping with text.

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -49,6 +49,16 @@
 
    & .title {
       margin-top: dimensions.margin('xl');
+
+
+      & .flags {
+         margin-top: dimensions.margin('lg');
+      }
+   }
+
+   & .flags {
+      display: grid;
+      justify-content: center;
    }
 
    & .highlights {
