Switch to flag library instead of native emojis.

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -57,7 +57,8 @@
    }
 
    & .flags {
-      display: grid;
+      display: flex;
+      gap: dimensions.padding('md');
       justify-content: center;
    }
 
