Mount- and dismount delay.

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,6 +12,7 @@
     max-width: 50vw;
     max-height: 85vh;
     border: 1px solid rgb(44, 44, 44);
+    opacity: 0;
 
     & .backgroundWrapper {
         position: absolute;
