Temporary ladle background workaround.

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import "/node_modules/flag-icons/css/flag-icons.css";
+@import url("./node_modules/flag-icons/css/flag-icons.css");
 
 * {
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 b, strong {
